--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ blinker==1.7.0
 cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
+cinemagoer==2023.5.1
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.3
@@ -17,6 +18,7 @@ httplib2==0.22.0
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.3
+lxml==5.2.1
 MarkupSafe==2.1.5
 numpy==1.26.4
 proto-plus==1.23.0
@@ -24,12 +26,17 @@ protobuf==4.25.3
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pyparsing==3.1.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.1
 requests==2.31.0
 rsa==4.9
+six==1.16.0
 soupsieve==2.5
 SQLAlchemy==2.0.29
+tqdm==4.66.2
 typing_extensions==4.11.0
+tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.1
 Werkzeug==3.0.2
