--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cinemagoer==2023.5.1
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.3
+Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 google-api-core==2.18.0
 google-api-python-client==2.127.0
